<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="isLoading" type="boolean" />
        <variable
            name="eventListener"
            type="com.example.test.paras.view.callback.ClickHomeCallBack" />
    </data>
    <android.support.design.widget.CoordinatorLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.journaldev.tablayoutviewpager.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>




            <Button
                android:id="@+id/btnViewTransaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/transaction"
                android:onClick="@{(v) -> eventListener.onViewTransactionClick(v)}"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/txtAmount"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <Button
                android:id="@+id/btnAddTransaction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_transaction"
                android:onClick="@{(v) -> eventListener.onAddTransactionClick(v)}"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/btnViewTransaction"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <ProgressBar
                android:id="@+id/loading_projects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/loading_projects"
                android:textAlignment="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:visibleGone="@{isLoading}"/>
        </android.support.constraint.ConstraintLayout>


    </android.support.design.widget.CoordinatorLayout>
</layout>
